ダウンロードできない表示を追加

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="app-display-main">
         <canvas id="app_canvas" width="150" height="300"></canvas>
       </div>
-      <a href="#" id="download">ダウンロード</a>
+      <a id="download">ダウンロード</a>
     </div>
 
     <script>
