--- a/index.html
+++ b/index.html
@@ -649,9 +649,9 @@
       };
 
       const DrawRect = () => {
-        ctx.strokeStyle = "#2C2C2D"; // 線の色を設定
+        ctx.strokeStyle = "#FEFEFE"; // 線の色を設定
         ctx.lineWidth = 6; // 線の太さを5pxに設定
-        ctx.fillStyle = "#2C2C2D44";
+        ctx.fillStyle = "#FEFEFEa0";
 
         ctx.fillRect(0, 0, 100, canvas.height);
         ctx.fillRect(canvas.width - 100, 0, 100, canvas.height);
