表現の統一

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </div>
       <!--日付を入力するところ-->
       <div class="app-date-form">
-        <p><label for="birthday">日付を入力</label></p>
+        <p><label for="birthday">生年月日</label></p>
         <input type="date" id="birthday" />
       </div>
       <p id="caveat" class="caveat"></p>
